--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-mod_id=azbypass
-mod_name=AzBypass
-mod_group=me.nixuge.azbypass
+mod_id=azspoof
+mod_name=AzSpoof
+mod_group=me.nixuge.azspoof
 mod_version=1.0.0
 mod_author=["Nixuge"]
 mod_description=Un mod qui vous identifie comme un joueur du AZ Launcher tout en étant sur Forge.
